--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body {
   background-color: yellow;
   font-family: "Arial Black", Helvetica, sans-serif;
-  font-size: 16em;
+  font-size: 16px;
   color: black;
 }
