--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body {
-  background-color: yellow;
-  font-family: "Arial Black", Helvetica, sans-serif;
+  background-color: lightblue;
+  font-family: verdana;
   font-size: 16px;
   color: black;
 }
